Reduce content width to avoid overlapping sidebar

--- a/_sass/_themes.scss
+++ b/_sass/_themes.scss
@@ -52,8 +52,8 @@ $caption-font-family        : $serif;
 $small                      : 600px !default;
 $medium                     : 768px !default;
 $medium-wide                : 900px !default;
-$large                      : 1333px !default;
-$x-large                    : 1777px !default;
+$large                      : 1100px !default;
+$x-large                    : 1400px !default;
 
 /* ==========================================================================
    Grid
